<resources>
    <string name="app_name">FilmCameraPhotoBook</string>
    <string name="action_preferences">Preferences</string>
    <string name="title">Title</string>
    <string name="camera_preference_title">Select your favorite camera</string>
    <string name="photography_preferences_category_title">Photography</string>
    <string name="photography_preferences_category_summary">The your default selected setup</string>
    <string name="lenses_preference_title">Select favorite lenses</string>
    <string name="film_preference_title">Select the film that you are shooting on</string>
    <string name="preferences">Preferences</string>
    <string name="gallery">Gallery</string>
    <string name="delete">Delete</string>
    <string name="cant_load_photos">Can not retrieve your photos.\nAre you sure you are online?</string>
    <string name="no_photos_yet">You do not have any photos yet.</string>
    <string name="film">Film</string>
    <string name="camera">Camera</string>
    <string name="aperture">Aperture</string>
    <string name="shutter_speed">Shutter speed</string>
    <string name="focus_distance">Focus distance</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="no_note">There are no notes for this photo.</string>
    <string name="photo_deleted">Photo was deleted</string>
    <string name="delete_photo">Delete the photo?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="welcome">Welcome</string>
    <string name="sign_out">Sign out</string>
    <string name="no_network">There seems to be issue with you connectivity.</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="click_here_to_retry"><u>Click here to retry</u></string>
    <string name="preview">Preview</string>
    <string name="focus_distance_helper">Between %1$.2f m and %2$.2f m or leave empty for ∞.</string>
    <string name="not_required">This field is not required</string>
    <string name="location">Location</string>
    <string name="click_here_to_open_map"><u>See on the map</u></string>
    <string name="others">Others</string>
    <string name="location_disabled">Location disabled. You can enable it again in the \"Preferences\" menu</string>
</resources>
