<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="photography_category"
        app:title="@string/photography_preferences_category_title"
        app:summary="@string/photography_preferences_category_summary">
        <DropDownPreference
            app:key="favorite_camera_preference"
            app:title="@string/camera_preference_title"
            app:icon="@drawable/ic_camera_black_24dp"/>
        <DropDownPreference
            app:key="favorite_lenses_preference"
            app:title="@string/lenses_preference_title"
            app:icon="@drawable/ic_lenses_black_24dp"
            app:isPreferenceVisible="false"/>
        <DropDownPreference
            app:key="film_preference"
            app:title="@string/film_preference_title"
            app:icon="@drawable/ic_film_black_24dp"/>
    </PreferenceCategory>
</PreferenceScreen>